# librarian

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  README.md
.beads/: .gitignore  issues.jsonl
.github/workflows/: ci.yml  codeql.yml  security.yml
librarian/: Cargo.toml  README.md
librarian/src/: error.rs  lib.rs  main.rs  progress.rs
librarian/src/chunk/: boundaries.rs  mod.rs
librarian/src/commands/: ingest.rs  init.rs  mod.rs  prune.rs  query.rs  status.rs  update.rs
librarian/src/config/: defaults.rs  mod.rs
librarian/src/crawl/: detection.rs  mod.rs  rate_limit.rs  renderer.rs  robots.rs  sitemap.rs
librarian/src/embed/: fastembed_impl.rs  mod.rs
librarian/src/mcp/: server.rs  tools.rs  types.rs
librarian/src/meta/: mod.rs  schema.rs
librarian/src/parse/: html.rs  markdown.rs  mod.rs  text.rs
librarian/src/rank/: mod.rs
librarian/src/store/: mod.rs
ragctl/: CONTRIBUTING.md  Cargo.toml  README.md
ragctl/src/: error.rs  lib.rs  main.rs
ragctl/src/chunk/: mod.rs
ragctl/src/commands/: ingest.rs  init.rs  query.rs  status.rs
ragctl/src/config/: defaults.rs  mod.rs
ragctl/src/crawl/: mod.rs
ragctl/src/mcp/: server.rs  tools.rs
ragctl/src/meta/: mod.rs
ragctl/src/parse/: markdown.rs  text.rs
ragctl/src/rank/: mod.rs
ragctl/src/store/: payload.rs
sidecar/: README.md  app.py  models.json  requirements.txt
src/: embedding_backend.rs  lib.rs  main.rs  models.rs
src/chunk/: mod.rs
src/commands/: ingest.rs  init.rs  mod.rs  prune.rs  query.rs  reindex.rs  sources.rs  status.rs  update.rs
src/config/: defaults.rs  mod.rs
src/crawl/: mod.rs  rate_limit.rs  renderer.rs
src/embed/: fastembed_impl.rs  http_backend.rs  mod.rs
src/mcp/: mod.rs  server.rs  tools.rs  types.rs
src/meta/: mod.rs  schema.rs
src/parse/: html.rs  mod.rs  text.rs
src/rank/: mod.rs
src/rerank/: fastembed_impl.rs  http_backend.rs  mod.rs
src/store/: mod.rs  payload.rs
